@startuml

title __Z_EXERCISE's Class Diagram__\n

  namespace com.ion.training.oops.abstraction {
    namespace z_exercise {
      class com.ion.training.oops.abstraction.z_exercise.Contractor {
          - workingHours : int
          + Contractor()
          + calculateSalary()
      }
    }
  }
  

  namespace com.ion.training.oops.abstraction {
    namespace z_exercise {
      abstract class com.ion.training.oops.abstraction.z_exercise.Employee {
          - name : String
          - paymentPerHour : int
          + Employee()
          {abstract} + calculateSalary()
          + getName()
          + getPaymentPerHour()
          + setName()
          + setPaymentPerHour()
      }
    }
  }
  

  namespace com.ion.training.oops.abstraction {
    namespace z_exercise {
      class com.ion.training.oops.abstraction.z_exercise.FullTimeEmployee {
          + FullTimeEmployee()
          + calculateSalary()
      }
    }
  }
  

  com.ion.training.oops.abstraction.z_exercise.Contractor -up-|> com.ion.training.oops.abstraction.z_exercise.Employee
  com.ion.training.oops.abstraction.z_exercise.FullTimeEmployee -up-|> com.ion.training.oops.abstraction.z_exercise.Employee


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
